RESOLVED FIXED118322
TrailingObjects shouldn't shrink vector capacity in a loop
https://bugs.webkit.org/show_bug.cgi?id=118322
Summary TrailingObjects shouldn't shrink vector capacity in a loop
Geoffrey Garen
Reported 2013-07-02 13:36:05 PDT
TrailingObjects shouldn't shrink vector capacity in a loop
Attachments
Patch (1.24 KB, patch)
2013-07-02 14:09 PDT, Geoffrey Garen
no flags
Patch (1.39 KB, patch)
2013-07-02 15:57 PDT, Geoffrey Garen
no flags
Patch (1.45 KB, patch)
2013-07-02 15:58 PDT, Geoffrey Garen
no flags
Geoffrey Garen
Comment 1 2013-07-02 14:09:33 PDT
Darin Adler
Comment 2 2013-07-02 15:30:14 PDT
Comment on attachment 205943 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=205943&action=review > Source/WebCore/rendering/RenderBlockLineLayout.cpp:2742 > - m_boxes.clear(); > + m_boxes.shrink(0); Why comment? It’s unclear that clear must not call clear.
Geoffrey Garen
Comment 3 2013-07-02 15:57:00 PDT
Geoffrey Garen
Comment 4 2013-07-02 15:58:11 PDT
Added a why comment to the ChangeLog and the code.
Geoffrey Garen
Comment 5 2013-07-02 15:58:25 PDT
Geoffrey Garen
Comment 6 2013-07-19 10:41:44 PDT
Comment on attachment 205955 [details] Patch Clearing flags on attachment: 205955 Committed r152905: <http://trac.webkit.org/changeset/152905>
Geoffrey Garen
Comment 7 2013-07-19 10:41:46 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 8 2013-07-25 17:34:30 PDT
*** Bug 118891 has been marked as a duplicate of this bug. ***
Ryosuke Niwa
Comment 9 2013-07-25 17:35:03 PDT
Note You need to log in before you can comment on or make changes to this bug.