TrailingObjects shouldn't shrink vector capacity in a loop https://bugs.webkit.org/show_bug.cgi?id=118322

Reviewed by Darin Adler.

This seems to take about 3% off the profile of loading a large text file.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::TrailingObjects::clear): clear() has the built-in side effect
of throwing away existing capacity. Use shrink(0) to indicate that we
want to keep our existing capacity.


Canonical link: https://commits.webkit.org/136757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152905 268f45cc-cd09-0410-ab3c-d52691b4dbfc